# finsight

./: .coveragerc  .env.local.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pyrefly.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
cli/: __main__.py
cli/finsight_api/: __main__.py  main.py  server.py  version.py
cli/finsight_worker/: __main__.py  main.py
cli/finsight_worker/commands/: fetch.py  worker.py
docs/: architecture.md  index.md  system_design.md
docs/plans/: test-plan.md
docs/review/: api-design-review.md  env-secrets-audit.md
docs/rfc/: system_design.md
docs/specs/: architecture-review.md
src/app/: main.py
src/app/application/use_cases/: download_historical_candles.py  get_account_summary.py  get_portfolio.py
src/app/domain/: exceptions.py
src/app/domain/models/: account_summary.py  candle.py  portfolio.py  prediction.py  stock_history.py  transaction.py  user.py
src/app/domain/repositories/: candle_repository.py
src/app/domain/value_objects/: amount.py  candle_interval.py  currency.py  isin.py  portfolio_position.py  prediction_direction.py  transaction_type.py
src/app/infrastructure/: config.py  container.py
src/app/infrastructure/utils/: retry.py
src/app/presentation/api/: constants.py
src/app/presentation/mappers/: portfolio_mapper.py
src/app/presentation/schemas/: account_summary.py  system.py
src/app/presentation/webserver/: app_factory.py
src/finsight_api/: main.py
src/finsight_api/application/use_cases/: download_historical_candles.py  get_account_summary.py  get_portfolio.py
src/finsight_api/domain/: constants.py
src/finsight_api/domain/models/: candle.py  portfolio.py  prediction.py  stock_history.py  transaction.py  user.py
src/finsight_api/domain/repositories/: candle_repository.py
src/finsight_api/domain/value_objects/: amount.py  isin.py  portfolio_position.py  prediction_direction.py
src/finsight_api/infrastructure/: config.py  container.py
src/finsight_api/infrastructure/utils/: pyproject.py
src/finsight_api/presentation/mappers/: portfolio_mapper.py
src/finsight_api/presentation/schemas/: portfolio.py
src/finsight_worker/: config.py  main.py  worker.py
src/finsight_worker/domain/: constants.py  models.py
src/finsight_worker/infrastructure/: config.py  container.py
src/finsight_worker/jobs/: download_historical_data.py
tests/: conftest.py
tests/test_domain/test_value_objects/: test_amount.py  test_currency.py  test_isin.py  test_prediction_direction.py  test_transaction_type.py
tests/test_finsight_api/test_infrastructure/: conftest.py  test_config.py
tests/test_infrastructure/: conftest.py  test_config.py
tests/test_infrastructure/test_adapters/: test_tinkoff_client.py
tests/test_infrastructure/test_dto/: test_account_summary_dto.py  test_candle_dto.py
tests/test_infrastructure/test_utils/: test_retry.py
(+53 files in other folders)
