[project]
name = "finsight"
version = "1.0.0"
description = "FastAPI-based REST API for integrating with Tinkoff Invest and predicting short-term stock movements."
authors = [
  { name = "Aleksander Moiseenko", email = "alex.mois.developer@gmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["fastapi", "ml", "finance", "stock", "predictions", "tinkoff"]
requires-python = ">=3.13,<4"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI"
]

dependencies = [
  "finsight-api",
  "finsight-worker",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
finsight-core = { workspace = true }
finsight-api = { workspace = true }
finsight-worker = { workspace = true }
t-tech-investments = { index = "tbank" }

# Tinkoff SDK снят с PyPI (карантин); официальный пакет публикуется на индексе T-Bank.
[[tool.uv.index]]
name = "tbank"
url = "https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple/"
explicit = true

[tool.uv]
package = false
default-groups = ["dev", "lint", "test"]

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "commitizen==4.16.3",
  "grpc-stubs==1.53.0.6",
  "flower==2.0.1",
  "celery-types==0.26.0",
]
lint = [
  "ruff==0.15.16",
  "mypy==2.1.0",
  "pyrefly==1.0.0",
]
test = [
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
]
